# bsp-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
bsp_sdk/: __init__.py  access.py  beo.py  biorecord.py  client.py  crypto.py  exchange.py  http_client.py  ieo.py  taxonomy.py  types.py
docs/: Makefile  conf.py  index.rst
docs/modules/: access.rst  beo.rst  biorecord.rst  client.rst  crypto.rst  exchange.rst  ieo.rst  types.rst
examples/: 01_create_beo.py  02_grant_consent.py  03_submit_biorecord.py  04_destroy_beo.py  full_flow.py
tests/: test_access.py  test_beo_destroy.py  test_biorecord.py  test_canonical.py  test_crypto.py  test_exchange.py
