[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsp-sdk"
version = "0.2.0"
description = "Official Python SDK for the Biological Sovereignty Protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ambrósio Institute", email = "dev@ambrosio.health" }]
keywords = ["bsp", "biological-sovereignty", "longevity", "health-data", "biomarker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://bsp.dev"
Repository = "https://github.com/Biological-Sovereignty-Protocol/bsp-sdk-python"
Documentation = "https://bsp.dev/docs/python"
