[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsp-sdk"
version = "2.1.0"
description = "Official Python SDK for the Biological Sovereignty Protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ambrósio Institute", email = "dev@ambrosioinstitute.org" }]
keywords = ["bsp", "biological-sovereignty", "longevity", "health-data", "biomarker", "aptos", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "pynacl>=1.5.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "aptos-sdk>=0.9.0",
    "pydantic>=2.0",
    "cryptography>=41.0",
]

# Security notice — ecdsa transitive dependency.
# BSP SDK does NOT use ecdsa directly (signing = Ed25519 via PyNaCl).
# aptos-sdk==0.11.0 hard-pins ecdsa==0.19.1.
#   - CVE-2026-33936 (medium) fixed in 0.19.2.
#   - CVE-2024-23342 (high, Minerva timing on P-256) — no upstream fix.
# We override at resolver level (uv) to pull 0.19.2. Pip users should add
# `--constraint constraints.txt` or upgrade aptos-sdk when a patched release
# ships. See SECURITY.md for details.
[tool.uv]
override-dependencies = ["ecdsa>=0.19.2"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"
clean = "rm -rf docs/_build docs/_autosummary"

[project.urls]
Homepage      = "https://biologicalsovereigntyprotocol.com"
Repository    = "https://github.com/Biological-Sovereignty-Protocol/bsp-sdk-python"
Documentation = "https://biologicalsovereigntyprotocol.com/developers/sdk-reference"
Issues        = "https://github.com/Biological-Sovereignty-Protocol/bsp-sdk-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.mypy]
strict          = true
python_version  = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
